// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FirstNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="telephone"
      >
        Imię
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="testId"
        label="Imię"
        name="telephone"
        placeholder="Imię"
        value="3232"
      />
    </div>
  </form>
</div>
`;

exports[`<FirstNameField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="testId"
  label="Imię"
  name="telephone"
  placeholder="Imię"
  value=""
/>
`;

exports[`<FirstNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="telephone"
      >
        Telephone
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="testId"
        label="Telephone"
        name="telephone"
        placeholder="Imię"
        value=""
      />
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <span
        class="sc-bqGHjH pDiJM"
      >
        +48
      </span>
      <input
        class="sc-kEqYlL jzZEFj"
        id="testId"
        name="telephone"
        placeholder="Telefon"
        prefix="+48"
        type="tel"
        value="3232a"
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podany numer telefonu jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="testId"
  name="telephone"
  placeholder="Telefon"
  prefix="+48"
  type="tel"
  value=""
/>
`;

exports[`<TelephoneField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="telephone"
      >
        Telephone
      </label>
      <span
        class="sc-bqGHjH pDiJM"
      >
        +48
      </span>
      <input
        class="sc-kEqYlL honwIS"
        id="testId"
        label="Telephone"
        name="telephone"
        placeholder="Telefon"
        prefix="+48"
        type="tel"
        value=""
      />
    </div>
  </form>
</div>
`;
